# OpenCv_MotionDetection_Dynamic

./: CMakeLists.txt  Detection.cpp  Detection.h  README.md  main.cpp
